--- a/assets/css/tonnybox.css
+++ b/assets/css/tonnybox.css
@@ -244,6 +244,13 @@ hr{
 
 /** Footer **/
 
+.site-footer{
+	background: white;
+}
+.site-footer hr{
+	background: white;
+}
+
 .contenido-footer{
 	padding: 1rem 0;
 }
