--- a/assets/css/tonnybox.css
+++ b/assets/css/tonnybox.css
@@ -247,8 +247,9 @@ hr{
 .site-footer{
 	background: white;
 }
-
-
+.site-footer .cotenedor{
+	background: white;
+}
 .contenido-footer{
 	padding: 1rem 0;
 }
